# Mini_TPO

./: .gitignore  AGENTS.md  NOTICE.md  README.md  pyproject.toml
configs/: project_config.yaml
data/interim/: README.md
data/processed/: README.md
data/raw/: README.md
models/: README.md  model_registry.json
notebooks/: 01_eda.ipynb  02_data_cleaning_preparation.ipynb  03_feature_engineering.ipynb  04_modeling_comparison.ipynb  05_optimization.ipynb
reports/: data_preparation_report.md  eda_data_quality_report.md  feature_engineering_report.md  github_readiness_report.md  modeling_report.md  optimization_report.md
reports/tables/: baseline_impact_summary.csv  baseline_metrics.csv  cardinality_and_variance_profile.csv  cv_metrics_by_chain.csv  cv_metrics_by_fold.csv  cv_metrics_by_sku.csv  cv_metrics_by_support.csv  cv_metrics_roi.csv  cv_metrics_segmented.csv  cv_metrics_uplift.csv  data_cleaning_log.csv  data_dictionary_enriched.csv  dataset_comparison.csv  discount_roi_summary.csv  discount_uplift_summary.csv  duration_roi_summary.csv  duration_uplift_summary.csv  eda_business_driven_summary.csv  model_role_summary.csv  (+59 more)
tests/: test_availability_and_outputs.py  test_data_cleaning.py  test_data_loading.py  test_data_validation.py  test_feature_engineering.py  test_leakage_guardrails.py  test_model_artifacts.py  test_model_evaluation.py  test_modeling.py  test_optimization.py  test_optimization_artifacts.py  test_pareto.py  test_scenario_generation.py  test_temporal_validation.py  test_traceability_and_artifacts.py  test_uplift_floor_support_redundancy.py
(+26 files in other folders)
